<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cal" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reser" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCalDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cal_date" />

    <TextView
        android:id="@+id/textViewCalBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cal_bmi" />

    <TextView
        android:id="@+id/textViewRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_bmi" />
</LinearLayout>